--- a/alarmmanagerclock/src/main/res/layout/dialog_simple.xml
+++ b/alarmmanagerclock/src/main/res/layout/dialog_simple.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:layout_width="match_parent"
-              android:layout_height="match_parent"
-              android:clickable="false"
-              android:gravity="center"
-              android:orientation="vertical">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:clickable="false"
+    android:gravity="center"
+    android:orientation="vertical">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -67,6 +67,15 @@
                     android:layout_weight="1"
                     android:background="@null"
                     android:text="确定"
+                    android:textColor="@color/light_black"
+                    android:textSize="16sp"/>
+                <Button
+                    android:id="@+id/dialog_delay"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:background="@null"
+                    android:text="延时1分钟"
                     android:textColor="@color/light_black"
                     android:textSize="16sp"/>
             </LinearLayout>
