--- a/app/src/main/res/layout/selectremindway_pop_window.xml
+++ b/app/src/main/res/layout/selectremindway_pop_window.xml
@@ -14,6 +14,21 @@
         android:orientation="vertical"
         android:paddingLeft="16dp"
         android:paddingRight="16dp">
+
+        <TextView
+            android:id="@+id/tv_drugway_1"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="10dp"
+            android:layout_marginTop="10dp"
+            android:drawableRight="@null"
+            android:gravity="center"
+            android:text="@string/vibration"
+            android:textColor="@color/black_33"
+            android:textSize="20sp" />
+
+        <TextView style="@style/horizontal_line_style" />
+
         <TextView
             android:id="@+id/tv_drugway_2"
             android:layout_width="match_parent"
